# Bardrix

./: .gitignore  Bardio.Bardrix.nuspec  Bardio.Bardrix.targets  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Conventions.md  README.md
.github/workflows/: Bardrix-Bulid-Test.yml  Build-Test-Cmake.yml  CMake-Build-And-Test-On-Multiple-Platforms.yml  Examples-Bulid.yml  cmake-build-and-test-multi-platform.yml
.github/workflows/template/: CMake-Build.yml
.github/workflows/templates/: Build-Test-Cmake.yml
Bardrix/: CMakeLists.txt
Bardrix/include/bardrix/: algorithm.h  bardrix.h  camera.h  color.h  dimension3.h  dimension4.h  light.h  math.h  objects.h  physics.h  point3.h  quaternion.h  ray.h  vector3.h
Bardrix/src/bardrix/: algorithm.cpp  bardrix.cpp  camera.cpp  color.cpp  dimension3.cpp  dimension4.cpp  light.cpp  math.cpp  objects.cpp  physics.cpp  point3.cpp  quaternion.cpp  ray.cpp  vector3.cpp
Bardrix_Tests/: CMakeLists.txt  pch.h  test_main.cpp
Bardrix_Tests/tests/: algorithm_test.cpp  camera_test.cpp  color_test.cpp  dimension3_test.cpp  dimension4_test.cpp  light_test.cpp  math_test.cpp  objects_test.cpp  physics_test.cpp  point3_test.cpp  quaternion_test.cpp  ray_test.cpp  vector3_test.cpp
Docs/: Bardrix_Reference.md  Conventions.md  Examples.md  Installation.md  Mathematics.md  README.md  Release_Notes.md
Docs/Examples/: CMakeLists.txt  Introduction.md  README.md
Docs/Examples/Introduction/: CMakeLists.txt  README.md  main.cpp
Docs/Examples/Raytracing/: CMakeLists.txt  README.md  main.cpp  sphere.cpp  sphere.h  window.cpp  window.h
Docs/Examples/Raytracing-Reflections/: README.md
Nuget/: Bardio.Bardrix.nuspec  Bardio.Bardrix.targets
